--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "offline_First",
-  "short_name": "offline_First",
+  "name": "Headlines",
+  "short_name": "Headlines",
   "icons": [{  
         "src": "images/icons/smiley-192x192.png",  
         "sizes": "192x192",
@@ -10,6 +10,6 @@
   "scope": "/",
   "display": "standalone",
   "orientation": "portrait",
-  "background_color": "#2196F3",
-  "theme_color": "#2196F3"
+  "background_color": "#2F3BA2",
+  "theme_color": "#2F3BA2"
 }
