--- a/polymer/bower.json
+++ b/polymer/bower.json
@@ -25,7 +25,9 @@
     "iron-swipeable-container": "PolymerElements/iron-swipeable-container#^1.0.3",
     "polymer-localforage": "^1.0.0",
     "paper-item": "^1.2.1",
-    "paper-listbox": "PolymerElements/paper-listbox#^1.1.2"
+    "paper-listbox": "PolymerElements/paper-listbox#^1.1.2",
+    "polymer-themes": "^1.0.1",
+    "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#^1.5.0"
   },
   "devDependencies": {
     "web-component-tester": "^4.0.0"
